# typescripten

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build-config-example.cmd  build-config-example.ninja  build-config-example.sh  build-config.ninja  build-default.cmd  build-default.sh  build-flags.mak  default.mak  github_action_configure.py  ninja.py  package-lock.json  package.json  tcjs.sln  testall.py  webpack.config.js
.github/workflows/: main.yml
bootstrap/: CMakeLists.txt
bootstrap/include/: js_bootstrap.h  js_callback.h  js_ptr.h  js_ref.h  js_types.h  ts.d.inl  ts.d.ts  typescript.d.bootstrap.h
bootstrap/src/: js_callback.cpp  js_callback.js
bootstrap/tests/CallbacksTest/: build.cmd  test.sh
bootstrap/tests/JsUnion/: build.sh
bootstrap/tests/JsUnionFail/: main.cpp
bootstrap/tests/PromiseTest/: build.sh
bootstrap/tests/TypescriptCompiler/: build.cmd  build.sh  package-lock.json
bootstrap/tests/UseAfterFreeUb/: test.cmd
cmake/: TypeScripten.cmake  runnode.cmd  runnode.sh
debug/: debug.js  index.html  webpack.config.js
example/: CMakeLists.txt  README.md  index.html  main.cpp  package-lock.json  package.json
examples/: testall.cmd  testall.py  testall.sh
examples/BasicTypes/: build.sh  main.cpp  test.cmd
examples/BootstrapDemo/: build.cmd  build.sh  main.cpp  main.emscripten  test.cmd
examples/CallbacksTest/: Makefile  build-make.cmd  build-make.sh  build.cmd  build.sh  main-pre.js  main.cpp  main.sh.js  test.sh
examples/JsUnion/: build.cmd  main.cpp
examples/JsUnionFail/: build.cmd  build.sh  main-pre.js  main.cpp
examples/PromiseTest/: build.cmd  build.sh  main-pre.js  main.cpp  test.sh
examples/TypescriptCompiler/: build.cmd  build.sh  demo-program.ts  get-dependencies.cmd  get-dependencies.sh  main-pre.js  main.cpp  package.json  run-demo.cmd  run-demo.sh
examples/UseAfterFreeUb/: build.cmd  build.sh  main.cpp
scratch-compiler/: package-lock.json  package.json  scratch-compiler.njsproj  scratch-compiler.ts  scratch-module.ts
stage1/: .gitignore  Makefile  build-make.cmd  build-make.sh  build.cmd  build.sh  demo-module.ts  get-dependencies.cmd  get-dependencies.sh  intrusive_set.h  jstypes.cpp  jstypes.h  main-pre.js  main.cpp  main.emscripten  mangle.cpp  mangle.h  mangle.inl  package-lock.json  package.json  precompiled.h  run-demo-compile.cmd  run-demo-compile.sh  run-demo.cmd  run-demo.sh  scratch-compiler-run.cmd  scratch-compiler.ts  scratch-module.ts  walk_symbol.cpp  walk_symbol.h  walk_type.cpp  walk_type.h
stage1/tests/: .gitignore  default.mak
stage1/tests/browser-dom/: Makefile  README.md  another-ts.cpp  main.cpp  main.emscripten
stage1/tests/compile-module/: .gitignore  Makefile  MyLib.d.ts  another-ts.cpp  build-make.cmd  build-make.sh  demo-module-use.cpp  main.cpp  my-lib.d.ts
stage1/tests/duplicate_symbols/: MyLib.d.ts  main.cpp
stage1/tests/generics/: MyLib.d.ts  main.cpp
stage1/tests/index_type/: test.d.ts
stage1/tests/optionalargs/: main.cpp  test.d.ts
stage1/tests/optionalmembers/: main.cpp  test.d.ts
stage1/tests/performance-test/: Makefile  MyLib.ts  build-test-make.sh  build.cmd  main.cpp  test.cmd
stage1/tests/run-browser-global/: Makefile  MyLib.ts  README.md  build.cmd  main.cpp  shell_minimal.html
stage1/tests/run-module/: .gitignore  MyLib.ts  build-make.cmd  main-pre.js  main.cpp  main.emscripten  my-lib.ts
stage1/tests/typealias/: MyLib.d.ts  build.sh  main.cpp  test.d.ts
stage1/tests/typeguards/: main.cpp  test.d.ts
typescripten/: CMakeLists.txt  jstypes.cpp  jstypes.h  main.cpp  main.emscripten  mangle.cpp  mangle.h  package.json  walk_symbol.h
typescripten/src/: callback.cpp  callback.js
typescripten/tests/BasicTypes/: CMakeLists.txt  main.cpp
typescripten/tests/BootstrapDemo/: CMakeLists.txt  build.sh  main.cpp  test.cmd
typescripten/tests/CallbacksTest/: CMakeLists.txt  main.cpp  main.emscripten
typescripten/tests/JsUnion/: CMakeLists.txt  main.cpp
typescripten/tests/JsUnionFail/: CMakeLists.txt  main-pre.js  main.cpp
typescripten/tests/PromiseTest/: CMakeLists.txt  main.cpp
typescripten/tests/TypescriptCompiler/: build.cmd  run-demo.cmd
typescripten/tests/UseAfterFreeUb/: CMakeLists.txt  main.cpp
typescripten/tests/browser-dom/: .gitignore
typescripten/tests/function/: CMakeLists.txt  main.cpp
typescripten/tests/optionalargs/: main.cpp
typescripten/tests/performance-test/: .gitignore  MyLib.ts  main-lib.js
typescripten/tests/typeguards/: MyLib.d.ts
typescripten/typescripten/: callback.h  callback_fwd.h  ref.h  ts.d.ts  types.h  typescripten.h  util.h
typescriptenc/: CMakeLists.txt  intrusive_set.h  jstypes.cpp  jstypes.h  lib.es2015.d.h  main-pre.js  main.cpp  mangle.cpp  mangle.h  mangle.inl  precompiled.h  ts.d.inl  tsvfs.d.ts  typescript.d.bootstrap.h  unicode.h  walk_symbol.h
typescriptenc/tests/TypescriptCompiler/: build.sh  main.cpp  run-demo.sh
typescriptenc/tests/browser-dom/: CMakeLists.txt  main.cpp  main.emscripten
typescriptenc/tests/compile-module/: CMakeLists.txt  MyLib.d.ts
typescriptenc/tests/duplicate_symbols/: CMakeLists.txt
typescriptenc/tests/generics/: CMakeLists.txt  MyLib.d.ts  main.cpp
typescriptenc/tests/generics2/: CMakeLists.txt  MyLib.d.ts
typescriptenc/tests/optionalargs/: CMakeLists.txt
typescriptenc/tests/optionalmembers/: CMakeLists.txt  main.emscripten
typescriptenc/tests/performance-test/: CMakeLists.txt  build.cmd  build.sh  main.cpp
typescriptenc/tests/run-browser-global/: .gitignore  CMakeLists.txt  MyLib.ts  README.md  main.cpp
typescriptenc/tests/run-module/: CMakeLists.txt  MyLib.ts  build.sh  main.cpp
typescriptenc/tests/typealias/: CMakeLists.txt  MyLib.d.ts
typescriptenc/tests/typearguments/: CMakeLists.txt  MyLib.d.ts  main.cpp
typescriptenc/tests/typeguards/: CMakeLists.txt  main.cpp
typescriptenc/tests/unicode/: CMakeLists.txt  main.cpp  unicode.d.ts
